# PyConChina2026

./: .gitignore  DESIGN_2026.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  script.py  start.sh
base/migrations/: 0003_update_pycon_2026_site_name.py
base/templatetags/: site.py
home/migrations/: 0007_alter_relatedlink_id.py
home/static/css/: home.css
home/templates/home/: article_page.html  home_page.html
locale/en/LC_MESSAGES/: django.po
locale/zh_Hans/LC_MESSAGES/: django.po
pycon/: bakery.py  middleware.py  urls.py
pycon/settings/: base.py  production.py
pycon/templates/: 404.html  500.html  base.html
schedule/: models.py
schedule/migrations/: 0003_room_locale_room_translation_key.py  0004_auto_20250622_2234.py  0005_alter_room_locale_alter_room_translation_key_and_more.py  0006_alter_room_id_alter_schedule_id.py
staff/: models.py
staff/migrations/: 0004_staff_locale_staff_translation_key.py  0005_auto_20250622_2234.py  0006_alter_staff_locale_alter_staff_translation_key_and_more.py  0007_alter_staff_id_alter_staffcategory_id.py
supporter/: models.py
supporter/migrations/: 0003_supporter_locale_supporter_translation_key.py  0004_auto_20250622_2234.py  0005_alter_supporter_locale_and_more.py  0006_alter_supporter_id_alter_supportertier_id.py
talk/: models.py  utils.py
talk/migrations/: 0005_author_locale_author_translation_key.py  0006_auto_20250622_2234.py  0007_alter_author_locale_alter_author_translation_key_and_more.py  0008_talkpage_position.py  0009_alter_author_id.py
(+19 files in other folders)
